<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/txtForgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/txtForgotPasswordText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtForgotPasswordText"
            android:padding="20dp"
            android:text="@string/forgot_password2"
            android:textSize="15dp" />

        <RelativeLayout
            android:id="@+id/relativeResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtForgotPasswordText2"
            android:layout_margin="15dp"
            android:background="@drawable/border_white"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/txtPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/edEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPasswordText"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:singleLine="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtSendForgotPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeResetPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_blue_border"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/send"
            android:textColor="@color/app_blue"
            android:textSize="18dp" />
    </RelativeLayout>
