<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/txtLoginAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp" />

    <RelativeLayout
        android:id="@+id/relativeEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/txtLoginAccount"
        android:layout_margin="10dp"
        android:background="@drawable/border_white"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/txtEmailAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmailAddressText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:nextFocusDown="@+id/textView2"
            android:singleLine="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeEmailAddress"
        android:layout_margin="10dp"
        android:background="@drawable/border_white"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/txtPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPasswordText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:singleLine="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativePassword"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtForgotPassword"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_white"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <RelativeLayout
        android:id="@+id/relativeLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLogin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/border_with_blue_background"
        android:gravity="center"
        android:padding="15dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgFacebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/facebook_while" />

        <TextView
            android:id="@+id/txtLoginWithFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/imgFacebook"
            android:gravity="center_vertical"
            android:text="@string/connect_with_facebook"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtDontHaveLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_dont_have_ac"
        android:textColor="@color/black" />

   <!-- <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
-->

</RelativeLayout>

